Added usage example to README

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+# CTAMacOS 
+
 This is a script to install the standard suite of Community TechAid programmes on to a Mac.
 
 Core precepts:
@@ -10,3 +12,12 @@ Follow up task would be to create a offline version.
 
 Nice to have: also update macOS to latest version.
 
+## Usage
+
+On the Mac that will be recieving the programmes:
+
+```zsh
+curl https://raw.githubusercontent.com/thewinduppirate/techaid-macOS/main/CTAMacOS.sh > ./CTAMacOS.sh
+chmod +x ./CTAMacOS.sh
+./CTAMacOS.sh
+```
